src/test/resources/com/pestphp/pest/inspections/DuplicateCustomExpectation.php
<?php

<error descr="Pest custom expectation names must be unique.">expect()->extend('toBeOne', function (): bool {
    return true;
})</error>;

<error descr="Pest custom expectation names must be unique.">expect()->extend('toBeOne', function (): bool {
    return true;
})</error>;